--- a/jax3d/projects/mobilenerf/configs/demo.yaml
+++ b/jax3d/projects/mobilenerf/configs/demo.yaml
@@ -5,6 +5,10 @@ scene_dir : "datasets/nerf_synthetic/chair"
 weights_dir : "weights"
 samples_dir : "samples"
 
+point_grid_size: 128
+num_test_frames: 3
+train_on_test_frames: False
+
 stage_1:
   training_iters : 200000
   train_iters_cont : 300000
